maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:41: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
     if (getIndication(x+1,y)==i-1)
     ^ShortestPathMaze:42: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
          {return(Direction.EAST)}
          ^ShortestPathMaze:43: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
     if (getIndication(x-1,y)==i-1)
     ^ShortestPathMaze:44: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
          {return(Direction.WEST)}
          ^ShortestPathMaze:45: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
     if (getIndication(x,y+1)==i-1)
     ^ShortestPathMaze:46: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
          {return(Direction.SOUTH)}
          ^ShortestPathMaze:47: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
     if (getIndication(x,y-1)==i-1)
     ^ShortestPathMaze:48: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
          {return(Direction.NORTH)}
          ^